Hoist the ref-scrolling stuff up to nsContentSink.  Bug 369015, r+sr=sicking